Chore: simplify