@@ -17,13 +17,6 @@ import java.util.Arrays;
 import java.util.List;
 
 public class LinkedLecternPlacementHandler extends SimplePlacementHandler {
-  private final boolean requireBook;
-  public LinkedLecternPlacementHandler() {
-    this(true);
-  }
-  public LinkedLecternPlacementHandler(boolean requireBook) {
-    this.requireBook = requireBook;
-  }
   @Override
   public boolean canHandle(Level level, BlockPos blockPos, BlockState blockState) {
     return blockState.is(CreateResources.Blocks.lecternController);
@@ -31,15 +24,6 @@ public class LinkedLecternPlacementHandler extends SimplePlacementHandler {
 
   @Override
   public List<ItemStack> getRequiredItems(Level level, BlockPos blockPos, BlockState blockState, @Nullable CompoundTag compoundTag) {
-    final List<ItemStack> neededItems = new ArrayList<>(Arrays.asList(new ItemStack(Items.LECTERN), ItemUtils.stackFromNullable(CreateResources.Items.linkedController)));
-    if (requireBook && compoundTag != null) {
-      final BlockEntity tileEntity = BlockEntity.loadStatic(blockPos, blockState, compoundTag);
-      if (tileEntity instanceof LecternBlockEntity lecternBlockEntity) {
-        if (lecternBlockEntity.hasBook()) {
-          neededItems.add(new ItemStack(Items.BOOK));
-        }
-      }
-    }
-    return neededItems;
+    return List.of(new ItemStack(Items.LECTERN), ItemUtils.stackFromNullable(CreateResources.Items.linkedController));
   }
 }
